Minor fixes to spacing and coloring of text

--- a/assets/scss/base/_pages.scss
+++ b/assets/scss/base/_pages.scss
@@ -17,7 +17,7 @@
 //Page Header
 .page-header {
   margin-top: 65px;
-  padding: 3em 0 0 0;
+  padding: 2.5em 0 0 0;
   width: 100%;
   text-align: center;
 }
