--- a/assets/scss/objects/_about.scss
+++ b/assets/scss/objects/_about.scss
@@ -41,5 +41,5 @@
   margin-bottom: .5em;
   letter-spacing: .2em;
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight: 600;
 }
