--- a/assets/scss/objects/_contact.scss
+++ b/assets/scss/objects/_contact.scss
@@ -115,7 +115,7 @@
   float: left;
   cursor: pointer;
   background: $base;
-  color: white;
+  color: white!important;
   border: none!important;
   outline: 0;
   display: block;
