--- a/assets/scss/objects/_single.scss
+++ b/assets/scss/objects/_single.scss
@@ -11,7 +11,8 @@
 }
 
 .single strong {
-	font-weight: bold;
+	font-weight: 600;
+	color: $base;
 }
 
 .single .page-header {
